--- a/certificado/CPAE-PAP-080825-CDMX-2025/index.html
+++ b/certificado/CPAE-PAP-080825-CDMX-2025/index.html
@@ -16,14 +16,37 @@
     <div class="grid" style="grid-template-columns: 1.2fr .8fr; margin-top:15px; align-items:center">
       <div class="card" style="background:#0b1220">
         <h2 style="margin:0 0 8px 0">Datos del CPAE</h2>
-        <table class="table">
-          <tr><th>Nombre del perro:</th><td>Paprika</td></tr>
-          <tr><th>Tutor(a):</th><td>Eric Rojas Pech</td></tr>
-          <tr><th>Especie / Raza:</th><td>Canino / Chihuahua </td></tr>
-          <tr><th>Fecha de emisión:</th><td>8 de agosto de 2025</td></tr>
-          <tr><th>Identificador:</th><td>CPAE-PAP-080825-CDMX-2025
-</td></tr>
-        </table>
+        <table class="table" style="width:100%; border-collapse:collapse;">
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Nombre del perro:</th>
+    <td style="text-align:center;">Paprika</td>
+  </tr>
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Tutor(a):</th>
+    <td style="text-align:center;">Eric Rojas Pech</td>
+  </tr>
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Especie / Raza:</th>
+    <td style="text-align:center;">Canino / Chihuahua</td>
+  </tr>
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Fecha de emisión:</th>
+    <td style="text-align:center;">8 de agosto de 2025</td>
+  </tr>
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Nombre del Doctor:</th>
+    <td style="text-align:center;">FRANCISCO JAVIER FIGUEROA SERNA</td>
+  </tr>
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Número de cédula / Tipo:</th>
+    <td style="text-align:center;">7265520 / C1</td>
+  </tr>
+  <tr>
+    <th style="text-align:left; padding-right:12px;">Identificador:</th>
+    <td style="text-align:center;">CPAE-PAP-080825-CDMX-2025</td>
+  </tr>
+</table>
+
       </div>
       <div class="grid">
   <img src="../../assets/paprika.jpg" alt="Paprika" 
