--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <meta name="robots" content="noindex, nofollow"/>
   <link rel="stylesheet" href="styles.css"/>
   <link rel="icon" type="image/png" href="assets/logo.png">
+  <!-- Meta etiquetas para compartir -->
+<meta property="og:title" content="Certificado de Perros de Asistencia Emocional (CPAE)" />
+<meta property="og:description" content="Conoce más sobre los perros de asistencia emocional y accede a tu certificado CPAE. Acompañamiento, bienestar y apoyo emocional para todos 🐾" />
+<meta property="og:image" content="https://perrosdeasistenciaemocional.github.io/certificate/assets/logo.png" />
+<meta property="og:url" content="https://perrosdeasistenciaemocional.github.io/certificate/" />
+<meta property="og:type" content="website" />
+
+<!-- Para dispositivos Apple y navegadores -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Certificado CPAE 🐶">
+<meta name="twitter:description" content="Conoce más sobre los perros de asistencia emocional y solicita tu certificado CPAE.">
+<meta name="twitter:image" content="https://perrosdeasistenciaemocional.github.io/certificate/assets/logo.png">
+<meta name="theme-color" content="#0b1220">
+
 </head>
 <body>
   
